--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ django-filter==23.1
 django-environ==0.10.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+psycopg2-binary==2.9.6
